# i3_tree_manager

./: Cargo.toml  LICENSE  README.md
src/: event.rs  main.rs  ui.rs
